--- a/SimulatedDevice/packages.config
+++ b/SimulatedDevice/packages.config
@@ -7,6 +7,7 @@
   <package id="DotNetty.Handlers-signed" version="0.3.1" targetFramework="net452" />
   <package id="DotNetty.Transport-signed" version="0.3.1" targetFramework="net452" />
   <package id="EnterpriseLibrary.TransientFaultHandling" version="6.0.1304.0" targetFramework="net452" />
+  <package id="M2Mqtt" version="4.3.0.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.Azure.Amqp" version="1.1.5" targetFramework="net452" />
   <package id="Microsoft.Azure.Devices.Client" version="1.0.13" targetFramework="net452" />
